# streaming-tutorial

./: README.md  pipeline.cabal
src/Pipeline/: Core.hs  Prelude.hs
