name:                pipeline
version:             0.1
synopsis:            Pipes clone, for education.

license:             BSD3
author:              Alex Bates
maintainer:          ard.bates@gmail.com
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  changelog

library 
  exposed-modules:     
      Pipeline.Core
  build-depends:       
      base == 4.8.*
    , free == 4.12.*
    , mtl == 2.2.*

  hs-source-dirs:      src
  ghc-options: -W

  default-language:    Haskell2010
